<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_android"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/title_map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_logo"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_view_list_24"
        android:title="@string/title_list_view"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_landscape"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_people_24"
        android:title="@string/title_workmates"
        app:showAsAction="ifRoom" />

</menu>